# src/repo/types/authTypes.ts
@@ -1,8 +1,12 @@
-import { loginDataType } from "../../request/request";
+import { loginDataType, signupDataType } from "../../request/request";
 
 interface IAuthRepo {
   login(
     loginData: loginDataType
+  ): Promise<[any | null, string | undefined, Error | null, number]>;
+
+  signup(
+    loginData: signupDataType
   ): Promise<[any | null, string | undefined, Error | null, number]>;
 }
 
